// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/cohorts/* /api/cohorts get get success, facilitator 1`] = `
Object {
  "cohorts": Array [
    Object {
      "created_at": "2020-07-24T14:52:28.429Z",
      "id": 1,
      "name": "First Cohort",
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-28T19:44:03.069Z",
          "ended_at": "2020-07-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:01:43.139Z",
          "user_id": 999,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:01:52.908Z",
          "ended_at": "2020-07-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:00.309Z",
          "user_id": 9,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:02:51.357Z",
          "ended_at": "2020-07-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:57.054Z",
          "user_id": 11,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "users": Array [
        Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "super",
        },
        Object {
          "email": "facilitator@email.com",
          "id": 888,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Facilitator User",
          "roles": Array [
            "participant",
            "facilitator",
          ],
          "username": "facilitator",
        },
        Object {
          "email": "participant@email.com",
          "id": 777,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Participant User",
          "roles": Array [
            "participant",
          ],
          "username": "participant",
        },
      ],
      "usersById": Object {
        "11": Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        "12": Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        "777": Object {
          "email": "participant@email.com",
          "id": 777,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Participant User",
          "roles": Array [
            "participant",
          ],
          "username": "participant",
        },
        "888": Object {
          "email": "facilitator@email.com",
          "id": 888,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Facilitator User",
          "roles": Array [
            "participant",
            "facilitator",
          ],
          "username": "facilitator",
        },
        "9": Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        "999": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "super",
        },
      },
    },
  ],
}
`;

exports[`/api/cohorts/* /api/cohorts get get success, participant 1`] = `
Object {
  "cohorts": Array [
    Object {
      "created_at": "2020-07-24T14:52:28.429Z",
      "id": 1,
      "name": "First Cohort",
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-28T19:44:03.069Z",
          "ended_at": "2020-07-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:01:43.139Z",
          "user_id": 999,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:01:52.908Z",
          "ended_at": "2020-07-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:00.309Z",
          "user_id": 9,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:02:51.357Z",
          "ended_at": "2020-07-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:57.054Z",
          "user_id": 11,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "users": Array [
        Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "super",
        },
        Object {
          "email": "facilitator@email.com",
          "id": 888,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Facilitator User",
          "roles": Array [
            "participant",
            "facilitator",
          ],
          "username": "facilitator",
        },
        Object {
          "email": "participant@email.com",
          "id": 777,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Participant User",
          "roles": Array [
            "participant",
          ],
          "username": "participant",
        },
      ],
      "usersById": Object {
        "11": Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        "12": Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        "777": Object {
          "email": "participant@email.com",
          "id": 777,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Participant User",
          "roles": Array [
            "participant",
          ],
          "username": "participant",
        },
        "888": Object {
          "email": "facilitator@email.com",
          "id": 888,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Facilitator User",
          "roles": Array [
            "participant",
            "facilitator",
          ],
          "username": "facilitator",
        },
        "9": Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        "999": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "super",
        },
      },
    },
  ],
}
`;

exports[`/api/cohorts/* /api/cohorts get get success, super 1`] = `
Object {
  "cohorts": Array [
    Object {
      "created_at": "2020-07-24T14:52:28.429Z",
      "id": 1,
      "name": "First Cohort",
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-28T19:44:03.069Z",
          "ended_at": "2020-07-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:01:43.139Z",
          "user_id": 999,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:01:52.908Z",
          "ended_at": "2020-07-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:00.309Z",
          "user_id": 9,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:02:51.357Z",
          "ended_at": "2020-07-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:57.054Z",
          "user_id": 11,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "users": Array [
        Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "super",
        },
        Object {
          "email": "facilitator@email.com",
          "id": 888,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Facilitator User",
          "roles": Array [
            "participant",
            "facilitator",
          ],
          "username": "facilitator",
        },
        Object {
          "email": "participant@email.com",
          "id": 777,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Participant User",
          "roles": Array [
            "participant",
          ],
          "username": "participant",
        },
      ],
      "usersById": Object {
        "11": Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        "12": Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        "777": Object {
          "email": "participant@email.com",
          "id": 777,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Participant User",
          "roles": Array [
            "participant",
          ],
          "username": "participant",
        },
        "888": Object {
          "email": "facilitator@email.com",
          "id": 888,
          "is_anonymous": false,
          "is_super": false,
          "personalname": "Facilitator User",
          "roles": Array [
            "participant",
            "facilitator",
          ],
          "username": "facilitator",
        },
        "9": Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        "999": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "super",
        },
      },
    },
  ],
}
`;

exports[`/api/cohorts/* /api/cohorts post success 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "A New Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
      Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "777": Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
      "888": Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id /api/cohorts/:id/scenarios put success 1`] = `
Object {
  "scenarios": Array [
    10,
    20,
    30,
  ],
}
`;

exports[`/api/cohorts/* /api/cohorts/:id get success 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
      Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "777": Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
      "888": Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id put success has updates 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
      Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "777": Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
      "888": Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id put success no updates 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
      Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "777": Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
      "888": Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/done (get) success 1`] = `
Object {
  "users": Array [
    Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    Object {
      "email": "facilitator@email.com",
      "id": 888,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Facilitator User",
      "roles": Array [
        "participant",
        "facilitator",
      ],
      "username": "facilitator",
    },
    Object {
      "email": "participant@email.com",
      "id": 777,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Participant User",
      "roles": Array [
        "participant",
      ],
      "username": "participant",
    },
  ],
  "usersById": Object {
    "11": Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    "12": Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    "777": Object {
      "email": "participant@email.com",
      "id": 777,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Participant User",
      "roles": Array [
        "participant",
      ],
      "username": "participant",
    },
    "888": Object {
      "email": "facilitator@email.com",
      "id": 888,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Facilitator User",
      "roles": Array [
        "participant",
        "facilitator",
      ],
      "username": "facilitator",
    },
    "9": Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    "999": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/join/:role (get) success 1`] = `
Object {
  "users": Array [
    Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    Object {
      "email": "facilitator@email.com",
      "id": 888,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Facilitator User",
      "roles": Array [
        "participant",
        "facilitator",
      ],
      "username": "facilitator",
    },
    Object {
      "email": "participant@email.com",
      "id": 777,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Participant User",
      "roles": Array [
        "participant",
      ],
      "username": "participant",
    },
  ],
  "usersById": Object {
    "11": Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    "12": Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    "777": Object {
      "email": "participant@email.com",
      "id": 777,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Participant User",
      "roles": Array [
        "participant",
      ],
      "username": "participant",
    },
    "888": Object {
      "email": "facilitator@email.com",
      "id": 888,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Facilitator User",
      "roles": Array [
        "participant",
        "facilitator",
      ],
      "username": "facilitator",
    },
    "9": Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    "999": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/participant/:participant_id (get) success 1`] = `
Object {
  "prompts": Object {
    "42": Array [
      Object {
        "id": "x",
      },
      Object {
        "id": "y",
      },
      Object {
        "id": "z",
      },
    ],
  },
  "responses": Array [
    Object {
      "response_id": 1,
      "scenario_id": 42,
    },
  ],
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/quit (get) success 1`] = `
Object {
  "users": Array [
    Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
    Object {
      "email": "facilitator@email.com",
      "id": 888,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Facilitator User",
      "roles": Array [
        "participant",
        "facilitator",
      ],
      "username": "facilitator",
    },
    Object {
      "email": "participant@email.com",
      "id": 777,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Participant User",
      "roles": Array [
        "participant",
      ],
      "username": "participant",
    },
  ],
  "usersById": Object {
    "11": Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    "12": Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    "777": Object {
      "email": "participant@email.com",
      "id": 777,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Participant User",
      "roles": Array [
        "participant",
      ],
      "username": "participant",
    },
    "888": Object {
      "email": "facilitator@email.com",
      "id": 888,
      "is_anonymous": false,
      "is_super": false,
      "personalname": "Facilitator User",
      "roles": Array [
        "participant",
        "facilitator",
      ],
      "username": "facilitator",
    },
    "9": Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    "999": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_super": true,
      "personalname": "Super User",
      "roles": Array [
        "participant",
        "super_admin",
        "facilitator",
        "researcher",
      ],
      "username": "super",
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/run/:run_id (get) success 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
      Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "777": Object {
        "email": "participant@email.com",
        "id": 777,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Participant User",
        "roles": Array [
          "participant",
        ],
        "username": "participant",
      },
      "888": Object {
        "email": "facilitator@email.com",
        "id": 888,
        "is_anonymous": false,
        "is_super": false,
        "personalname": "Facilitator User",
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "username": "facilitator",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "super",
      },
    },
  },
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/scenario/:scenario_id (get) success 1`] = `
Object {
  "prompts": Array [
    Object {
      "id": "x",
    },
    Object {
      "id": "y",
    },
    Object {
      "id": "z",
    },
  ],
  "responses": Array [
    Object {
      "response_id": 1,
      "scenario_id": 42,
    },
  ],
}
`;

exports[`/api/cohorts/* /api/cohorts/:id/scenario/:scenario_id/:user_id (get) success 1`] = `
Object {
  "prompts": Array [
    Object {
      "id": "x",
    },
    Object {
      "id": "y",
    },
    Object {
      "id": "z",
    },
  ],
  "responses": Array [
    Object {
      "response_id": 1,
      "scenario_id": 42,
    },
  ],
}
`;
